# process-delta

./: README.md  desktop-init.py  psdelta.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
ahk_scripts/: _example-discord.ahk  _example-firefox-todoist.ahk  ahk_common.ahk  discord-common.ahk  firefox-block-ctrl+W.ahk  launcher-common.ahk
helpers/: admintest.py  conhost-parents.py
psdelta/: __main__.py  psdelta.py
