[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psdelta"
version = "0.1.0"
description = "Manage processes and services based on snapshots (Process Delta Tool)"
authors = [
    { name = "Dustin Darcy", email = "dustin@scarcityhypothesis.org" }
]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["processes", "services", "snapshot", "startup", "shutdown"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "psutil",
    "pywin32; platform_system=='Windows'"
]
